--- a/_publications/2021-ahlm.md
+++ b/_publications/2021-ahlm.md
@@ -2,11 +2,11 @@
 title: "Go Forth and Prosper: Language Modeling with Ancient Textual History"
 authors: "Rik Koncel-Kedziorski and Noah A. Smith"
 collection: publications
-permalink: /publication/2020-define
+permalink: /publication/2021-ahlm
 excerpt: '"The embedding layer can thus be thought of as a wide, shallow network consisting of a single linear transformation [that] takes a token from its orthographic form to a representation of those of its morphosyntactic and semantic properties which are relevant for modeling an arbitrary number of contexts in which the token can occur. We hypothesize that ... a shallow network would require exceptional capacity to learn a good approximation [but] a deeper network can ... with significantly fewer parameters ..."'
-date: 2020-4-1
-venue: 'ICLR 2020'
-paperurl: 'http://rikdz.github.io/files/2020-define.pdf'
+date: 2021-4-17
+venue: 'Pre-Print'
+paperurl: 'http://rikdz.github.io/files/2021-AHLM.pdf'
 ---
 
 Abstract:
