--- a/_publications/2021-ahlm.md
+++ b/_publications/2021-ahlm.md
@@ -3,17 +3,21 @@ title: "Go Forth and Prosper: Language Modeling with Ancient Textual History"
 authors: "Rik Koncel-Kedziorski and Noah A. Smith"
 collection: publications
 permalink: /publication/2021-ahlm
-excerpt: '"The embedding layer can thus be thought of as a wide, shallow network consisting of a single linear transformation [that] takes a token from its orthographic form to a representation of those of its morphosyntactic and semantic properties which are relevant for modeling an arbitrary number of contexts in which the token can occur. We hypothesize that ... a shallow network would require exceptional capacity to learn a good approximation [but] a deeper network can ... with significantly fewer parameters ..."'
+excerpt: '"we introduce a simple technique for improving language modeling of long documents by effectively extending the LM’s accessible history beyond the architecture-specified context window and into the “ancient history”—text which comes before the beginning of the context window. We train an auxiliary function to select the parts of the ancient history that are most predictive of the future text..."'
 date: 2021-4-17
 venue: 'Pre-Print'
 paperurl: 'http://rikdz.github.io/files/2021-AHLM.pdf'
 ---
 
 Abstract:
+We introduce a technique for improving document-level a language models (LM) by leveraging ``ancient history'':  text that is outside the LM's current context window. 
+We learn an auxiliary function to select spans from the ancient history which can help the LM to predict future text. 
+The selected text spans are then copied directly into the LM's context window, replacing less predictive spans.  
+This method can improve perplexity of pretrained LMs with no updates to the LM's own parameters. 
+We further observe that an auxiliary function trained in a specific textual domain like Wikipedia will also work in a substantially different domain such as scientific publications. 
+With this technique we see a 7% perplexity reduction on Wikipedia articles, and a 12% perplexity reduction on scientific texts. 
 
-For sequence models with large vocabularies, a majority of network parameters lie in the input and output layers. In this work, we describe a new method, DeFINE, for learning deep token representations efficiently. Our architecture uses a hierarchical structure with novel skip-connections which allows for the use of low dimensional input and output layers, reducing total parameters and training time while delivering similar or better performance versus existing methods. DeFINE can be incorporated easily in new or existing sequence models. Compared to state-of-the-art methods including adaptive input representations, this technique results in a 6% to 20% drop in perplexity. On WikiText-103, DeFINE reduces the total parameters of Transformer-XL by half with minimal impact on performance. On the Penn Treebank, DeFINE improves AWD-LSTM by 4 points with a 17% reduction in parameters, achieving comparable performance to state-of-the-art methods with fewer parameters. For machine translation, DeFINE improves the efficiency of the Transformer model by about 1.4 times while delivering similar performance.
-
-[PDF](http://rikdz.github.io/files/2020-define.pdf)
+[PDF](http://rikdz.github.io/files/2021-AHLM.pdf)
 
 Bibtex:
 {% raw %}
