--- a/_publications/2021-ahlm.md
+++ b/_publications/2021-ahlm.md
@@ -3,14 +3,14 @@ title: "Go Forth and Prosper: Language Modeling with Ancient Textual History"
 authors: "Rik Koncel-Kedziorski and Noah A. Smith"
 collection: publications
 permalink: /publication/2021-ahlm
-excerpt: '"we introduce a simple technique for improving language modeling of long documents by effectively extending the LM’s accessible history beyond the architecture-specified context window and into the “ancient history”—text which comes before the beginning of the context window. We train an auxiliary function to select the parts of the ancient history that are most predictive of the future text..."'
+excerpt: '"We introduce a simple technique for improving language modeling of long documents by effectively extending the LM’s accessible history beyond the architecture-specified context window and into the “ancient history”—text which comes before the beginning of the context window. We train an auxiliary function to select the parts of the ancient history that are most predictive of the future text..."'
 date: 2021-4-17
 venue: 'Pre-Print'
 paperurl: 'http://rikdz.github.io/files/2021-AHLM.pdf'
 ---
 
 Abstract:
-We introduce a technique for improving document-level a language models (LM) by leveraging ``ancient history'':  text that is outside the LM's current context window. 
+We introduce a technique for improving document-level a language models (LM) by leveraging "ancient history":  text that is outside the LM's current context window. 
 We learn an auxiliary function to select spans from the ancient history which can help the LM to predict future text. 
 The selected text spans are then copied directly into the LM's context window, replacing less predictive spans.  
 This method can improve perplexity of pretrained LMs with no updates to the LM's own parameters. 
@@ -22,11 +22,11 @@ With this technique we see a 7% perplexity reduction on Wikipedia articles, and 
 Bibtex:
 {% raw %}
 ```
-@inproceedings{mehta2020define,
-  title={DeFINE: Deep Factorized Input Token Embeddings for Neural Sequence Modeling},
-  author={Mehta, Sachin and Koncel-Kedziorski, Rik and Rastegari, Mohammad and Hajishirzi, Hannaneh},
-  booktitle={International Conference on Learning Representations},
-  year={2020}
+@inproceedings{koncel2021goforth,
+  title={Go Forth and Prosper: Language Modeling with Ancient Textual History},
+  author={Koncel-Kedziorski, Rik and Smith, Noah A.},
+  booktitle={Preprint},
+  year={2021}
 }
 ```
 {% endraw %}
